Fixed alignment and sizing for sponsors page on mobile

--- a/client/src/stylesheets/Sponsors.css
+++ b/client/src/stylesheets/Sponsors.css
@@ -1,13 +1,15 @@
 .Sponsors {
   background-color: #e1e1e1;
   width: 100%;
-  padding: 40px;
   text-align: center;
   margin-top: 10%;
   padding-bottom: 5%;
   margin-bottom: 10%;
   box-shadow: 0px 4px 2.3px 4px rgba(0, 0, 0, 0.25),
     0px 4px 4px 5px rgba(0, 0, 0, 0.25) inset;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .heading {
@@ -31,31 +33,13 @@
 .roboshop-logo {
   width: 50%;
   max-width: 866px;
+  min-width: 300px;
   height: auto;
 }
 
 .digikey-logo {
   width: 40%;
   max-width: 591px;
+  min-width: 200px;
   height: auto;
-}
-
-@media (max-width: 768px) {
-  .roboshop-logo {
-    width: 80%;
-  }
-
-  .digikey-logo {
-    width: 60%;
-  }
-}
-
-@media (max-width: 480px) {
-  .roboshop-logo {
-    width: 90%;
-  }
-
-  .digikey-logo {
-    width: 70%;
-  }
 }
